# xurl

./: .gitignore  .goreleaser.yaml  .xurl_test  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  SKILL.md  go.mod  go.sum  install.sh  main.go  xurl.go
.github/workflows/: cut-release.yml  go.yml  release.yml
api/: chat.go  chat_test.go  client.go  client_test.go  endpoints.go  endpoints_test.go  execute.go  execute_test.go  media.go  media_test.go  requests.go  shortcuts.go  shortcuts_test.go  tweets.go
auth/: auth.go  auth_test.go  listener.go
bot/: agent.go  config.go  handler.go  poller.go  state.go  tweet.go
cli/: auth.go  auth_test.go  bot.go  chat.go  chat_test.go  chat_unsupported.go  mcp.go  mcp_test.go  media.go  root.go  shortcuts.go  shortcuts_test.go  token.go  token_test.go  version.go  webhook.go
config/: config.go  config_test.go
errors/: errors.go
npm/: install.js
scripts/: cut_release.py  cut_release_test.py
src/: cli.rs  config.rs  error.rs  main.rs
src/api/: client.rs
src/auth/: listener.rs  mod.rs  oauth.rs  token_store.rs
src/config/: environment.rs
store/: chatkeys.go  chatkeys_test.go  paths.go  paths_test.go  tokens.go  tokens_test.go
utils/: color.go  utils.go
version/: version.go
