[package]
name = "xurl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
home = "0.5.9"
http = "1.2.0"
oauth2 = "4.4.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
webbrowser = "1.0.3"

[dev-dependencies]
mockito = "1.6.1"
