[package]
name = "xurl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
base64 = "0.22.1"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
hmac = "0.12.1"
home = "0.5.9"
http = "1.2.0"
oauth2 = "4.4.2"
percent-encoding = "2.3.1"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sha1 = "0.10.6"
thiserror = "2.0.7"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.4"
urlencoding = "2.1.3"
webbrowser = "1.0.3"

[dev-dependencies]
mockito = "1.6.1"
